# AbRefT5

./: .gitignore  README.md  env.yml  pyproject.toml
scripts/: build_refine_pairs_all.py  count_v_domains.py  data_fil.py  prepare_all_vdomains.py  prepare_scfv_biopy.py  train_refiner_s2s.py  trim_to_vdomain.py
src/abrefT5/: inference.py
src/abrefT5.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/abrefT5/models/: protT5.py
