[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abrefT5"
version = "0.1.0"
description = "ProtT5-based antibody structure refinement"
authors = [{ name = "Shantanu" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "transformers>=4.40",
  "torch",          # pin to a CUDA-compatible version later if needed
  "numpy",
  "pandas",
  "einops",
  "biopython",
  "tqdm",
  "sentencepiece>=0.1.99",
  "anarci",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
